--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#" style="color:white">K.H</a>
+      <a class="navbar-brand" href="file:///C:/Users/Kevin/OneDrive/Documents/2019%20Portfolio/index.html">K.H</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
@@ -36,19 +36,16 @@
   
 <header>
   <div class="header__bg"></div>
-  <h1>Kevin Heaghney</h1>
+  <div class="name">
+ <span class="first-letter">K</span><span>evin</span><span class="first-letter">H</span><span>eaghney</span>
+ </div>
+ <hr class="hr"></hr>
   <h2> Front End Developer</h2>
 </header>
 
 <section>
-  <div class="row">
-    <div class="column" style="background-color:#aaa;">
-    <img src="capture.png" class="images">
-      </div>
-    <div class="column" style="background-color:#bbb;">
-      <img src="Capture2.PNG" class="images">
-    </div>
-  </div>
+  <div class="parallax"></div>
+  
 </section>
 
 <body>
@@ -56,28 +53,25 @@
     <h3 class="w3-padding-16 w3-text-black">My Skills</h3>
     <p class="w3-wide">HTML</p>
     <div class="w3-black">
-        <div class="w3-green" style="height:28px;width:95%"></div>
+        <div class="w3-color" style="height:28px;width:95%"></div>
     </div>
     <p class="w3-wide">CSS</p>
     <div class="w3-black">
-        <div class="w3-green" style="height:28px;width:95%"></div>
+        <div class="w3-color" style="height:28px;width:95%"></div>
     </div>
     <p class="w3-wide">JavaScript</p>
     <div class="w3-black">
-        <div class="w3-green" style="height:28px;width:70%"></div>
+        <div class="w3-color" style="height:28px;width:70%"></div>
     </div>
     <p class="w3-wide">Bootstrap</p>
     <div class="w3-black">
-        <div class="w3-green" style="height:28px;width:85%"></div>
+        <div class="w3-color" style="height:28px;width:85%"></div>
     </div><br><br>
   </div>
 
 
 <footer>
 <div class="footer">
-  <p class="footerTitle">
-    Thank you for visiting
-  </p>
   <div class="col-md-4 col-xs-4">
     <p class="nameTitle">
       Kevin Heaghney<br>
@@ -86,8 +80,12 @@
   </div>
    <div class="col-md-4 col-xs-4">
      <p class="socialMedia">
-       <a href="#" class="fa fa-facebook">
-         <a href="#" class="fa fa-linkedin">
+       <a href="https://github.com/kheaghney" class="btmLinks">Projects</a>
+       <a href="file:///C:/Users/Kevin/OneDrive/Documents/2019%20Portfolio/AboutMe.html" class="btmLinks">About Me</a>
+       <a href="file:///C:/Users/Kevin/OneDrive/Documents/2019%20Portfolio/ContactInfo.html" class="btmLink">Contact Info</a>
+       <br>
+       <a href="https://www.facebook.com/kevin.heaghney" class="fa fa-facebook">
+         <a href="https://www.linkedin.com/in/kevinheaghney" class="fa fa-linkedin">
          </a>
        </a>
      </p>
