--- a/AboutMe.html
+++ b/AboutMe.html
@@ -18,13 +18,13 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#" style="color:white">K.H</a>
+      <a class="navbar-brand" href="file:///C:/Users/Kevin/OneDrive/Documents/2019%20Portfolio/index.html" style="color:white">K.H</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
         <li><a href="https://github.com/kheaghney">Projects</a></li>
-        <li><a href="#">About Me</a></li>
-        <li><a href="#">Contact Info</a></li>
+        <li><a href="file:///C:/Users/Kevin/OneDrive/Documents/2019%20Portfolio/AboutMe.html">About Me</a></li>
+        <li><a href="file:///C:/Users/Kevin/OneDrive/Documents/2019%20Portfolio/ContactInfo.html">Contact Info</a></li>
       </ul>
      
     </div>
@@ -38,10 +38,8 @@
 </header>
 <body>
         <footer>
+            <footer>
                 <div class="footer">
-                  <p class="footerTitle">
-                    Thank you for visiting
-                  </p>
                   <div class="col-md-4 col-xs-4">
                     <p class="nameTitle">
                       Kevin Heaghney<br>
@@ -50,8 +48,12 @@
                   </div>
                    <div class="col-md-4 col-xs-4">
                      <p class="socialMedia">
-                       <a href="#" class="fa fa-facebook">
-                         <a href="#" class="fa fa-linkedin">
+                       <a href="https://github.com/kheaghney" class="btmLinks">Projects</a>
+                       <a href="file:///C:/Users/Kevin/OneDrive/Documents/2019%20Portfolio/AboutMe.html" class="btmLinks">About Me</a>
+                       <a href="file:///C:/Users/Kevin/OneDrive/Documents/2019%20Portfolio/ContactInfo.html" class="btmLink">Contact Info</a>
+                       <br>
+                       <a href="https://www.facebook.com/kevin.heaghney" class="fa fa-facebook">
+                         <a href="https://www.linkedin.com/in/kevinheaghney" class="fa fa-linkedin">
                          </a>
                        </a>
                      </p>
@@ -70,5 +72,5 @@
                 </div>
                 
                 </footer>
-</body>
-</html>
+                </body>
+                </html>
