--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
        <a href="file:///C:/Users/Kevin/OneDrive/Documents/2019%20Portfolio/AboutMe.html" class="btmLinks">About Me</a>
        <a href="file:///C:/Users/Kevin/OneDrive/Documents/2019%20Portfolio/ContactInfo.html" class="btmLink">Contact Info</a>
        <br>
-       <a href="https://www.facebook.com/kevin.heaghney" class="fa fa-facebook">
+       <a href="https://www.facebook.com/kevin.heaghney" class="fa fa-facebook"></a>
          <a href="https://www.linkedin.com/in/kevinheaghney" class="fa fa-linkedin">
          </a>
-       </a>
+       <a href="https://github.com/kheaghney" class="fa fa-github"></a>
      </p>
    </div>
    <div class="col-md-4 col xs-6">
