--- a/ContactInfo.html
+++ b/ContactInfo.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>About Me</title>
+  <title>2019 Portfolio</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
   <link type="text/css" rel="stylesheet" href="main.css"/>
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 </head>
@@ -18,7 +21,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="file:///C:/Users/Kevin/OneDrive/Documents/2019%20Portfolio/index.html" style="color:white">K.H</a>
+      <a class="navbar-brand" href="file:///C:/Users/Kevin/OneDrive/Documents/2019%20Portfolio/index.html">K.H</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
@@ -33,10 +36,21 @@
   
 <header>
   <div class="header__bg"></div>
-  <h1>Kevin Heaghney</h1>
+  <div class="name">
+ <span class="first-letter">K</span><span>evin</span><span class="first-letter">H</span><span>eaghney</span>
+ </div>
+ <hr class="hr"></hr>
   <h2> Front End Developer</h2>
 </header>
 <body>
+  <div class="contact">
+    <p class="emailnumber">
+      Phone: 314.578.9129
+    </p>
+    <p class="emailnumber">
+      Email: kheaghney1@gmail.com
+    </p>
+  </div>
     <footer>
         <div class="footer">
           <div class="col-md-4 col-xs-4">
@@ -51,10 +65,11 @@
                <a href="file:///C:/Users/Kevin/OneDrive/Documents/2019%20Portfolio/AboutMe.html" class="btmLinks">About Me</a>
                <a href="file:///C:/Users/Kevin/OneDrive/Documents/2019%20Portfolio/ContactInfo.html" class="btmLink">Contact Info</a>
                <br>
-               <a href="https://www.facebook.com/kevin.heaghney" class="fa fa-facebook">
+               <a href="https://www.facebook.com/kevin.heaghney" class="fa fa-facebook"></a>
                  <a href="https://www.linkedin.com/in/kevinheaghney" class="fa fa-linkedin">
                  </a>
-               </a>
+            
+               <a href="https://github.com/kheaghney" class="fa fa-github"></a>
              </p>
            </div>
            <div class="col-md-4 col xs-4">
