--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
         <li><a href="https://github.com/kheaghney">Projects</a></li>
-        <li><a href="file:///C:/Users/Kevin/OneDrive/Documents/2019%20Portfolio/AboutMe.html">About Me</a></li>
-        <li><a href="file:///C:/Users/Kevin/OneDrive/Documents/2019%20Portfolio/ContactInfo.html">Contact Info</a></li>
+        <li><a href="AboutMe.html">About Me</a></li>
+        <li><a href="ContactInfo.html">Contact Info</a></li>
       </ul>
      
     </div>
