--- a/ContactInfo.html
+++ b/ContactInfo.html
@@ -21,13 +21,13 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="file:///C:/Users/Kevin/OneDrive/Documents/2019%20Portfolio/index.html">K.H</a>
+      <a class="navbar-brand" href="index.html">K.H</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
         <li><a href="https://github.com/kheaghney">Projects</a></li>
-        <li><a href="file:///C:/Users/Kevin/OneDrive/Documents/2019%20Portfolio/AboutMe.html">About Me</a></li>
-        <li><a href="file:///C:/Users/Kevin/OneDrive/Documents/2019%20Portfolio/ContactInfo.html">Contact Info</a></li>
+        <li><a href="AboutMe.html">About Me</a></li>
+        <li><a href="ContactInfo.html">Contact Info</a></li>
       </ul>
      
     </div>
@@ -62,8 +62,8 @@
            <div class="col-md-4 col-xs-4">
              <p class="socialMedia">
                <a href="https://github.com/kheaghney" class="btmLinks">Projects</a>
-               <a href="file:///C:/Users/Kevin/OneDrive/Documents/2019%20Portfolio/AboutMe.html" class="btmLinks">About Me</a>
-               <a href="file:///C:/Users/Kevin/OneDrive/Documents/2019%20Portfolio/ContactInfo.html" class="btmLink">Contact Info</a>
+               <a href="AboutMe.html" class="btmLinks">About Me</a>
+               <a href="ContactInfo.html" class="btmLink">Contact Info</a>
                <br>
                <a href="https://www.facebook.com/kevin.heaghney" class="fa fa-facebook"></a>
                  <a href="https://www.linkedin.com/in/kevinheaghney" class="fa fa-linkedin">
