--- a/AboutMe.html
+++ b/AboutMe.html
@@ -44,7 +44,7 @@
 </header>
 <body>
   <div class="buttonPDF">
-    <a href="resume2019.pdf" class="resume" download>Click to download Resume</a>
+    <a href="Resume2019.doc.pdf" class="resume" download>Click to download Resume</a>
   </div>
   <footer>
       <div class="footer">
