--- a/ContactInfo.html
+++ b/ContactInfo.html
@@ -44,12 +44,13 @@
 </header>
 <body>
   <div class="contact">
-    <p class="emailnumber">
-      Phone: 314.578.9129
-    </p>
-    <p class="emailnumber">
-      Email: kheaghney1@gmail.com
-    </p>
+    <span class="glyphicon glyphicon-earphone">
+      314.578.9129
+    </span>
+    <br>
+    <span class="glyphicon glyphicon-envelope">
+        <a href="mailto:kheaghney1@gmail.com">kheaghney1@gmail.com</a>
+    </span>
   </div>
   <footer>
       <div class="footer">
