--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
  </div>
  <hr class="hr"></hr>
   <h2> Front End Developer</h2>
+  <br>
+  <h4>Creatively touching the world, through my alluring and responsive websites.</h4>
 </header>
 
 <section>
