--- a/AboutMe.html
+++ b/AboutMe.html
@@ -41,6 +41,8 @@
  </div>
  <hr class="hr"></hr>
   <h2> Front End Developer</h2>
+  <br>
+  <h4>Started my voyage 4 years ago and have loved every second of it.<br> As I passionately and creatively navigate through my journey,<br> my mastery in Web Development and Design is growing everyday. </h4>
 </header>
 <body>
   <div class="buttonPDF">
