--- a/ContactInfo.html
+++ b/ContactInfo.html
@@ -49,7 +49,7 @@
     </span>
     <br>
     <span class="glyphicon glyphicon-envelope">
-        <a href="mailto:kheaghney1@gmail.com">kheaghney1@gmail.com</a>
+       kheaghney1@gmail.com
     </span>
   </div>
   <footer>
