--- a/index.html
+++ b/index.html
@@ -68,6 +68,22 @@
     <p class="w3-wide">Bootstrap</p>
     <div class="w3-black">
         <div class="w3-color" style="height:28px;width:85%"></div>
+    </div>
+    <p class="w3-wide">GitHub</p>
+    <div class="w3-black">
+        <div class="w3-color" style="height:28px;width:85%"></div>
+    </div>
+    <p class="w3-wide">UX/UI</p>
+    <div class="w3-black">
+        <div class="w3-color" style="height:28px;width:60%"></div>
+    </div>
+    <p class="w3-wide">JQuery</p>
+    <div class="w3-black">
+        <div class="w3-color" style="height:28px;width:60%"></div>
+    </div>
+    <p class="w3-wide">Responsive Design</p>
+    <div class="w3-black">
+        <div class="w3-color" style="height:28px;width:90%"></div>
     </div><br><br>
   </div>
 
