--- a/AboutMe.html
+++ b/AboutMe.html
@@ -46,7 +46,7 @@
 </header>
 <body>
   <div class="buttonPDF">
-    <a href="Resume2019.doc.pdf" class="resume" download>Click to download Resume</a>
+    <a href="Resume2019.doc.html" class="resume" download>Click for Resume</a>
   </div>
   <footer>
       <div class="footer">
