--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
  <hr class="hr"></hr>
   <h2> Front End Developer</h2>
   <br>
-  <h4>Creatively touching the world, through my alluring and responsive websites.</h4>
+  <h4>Creatively touching people, through my alluring and responsive websites.</h4>
 </header>
 
 <section>
