--- a/AboutMe.html
+++ b/AboutMe.html
@@ -34,20 +34,31 @@
   </div>
 </nav>
   
-<header>
+<header class="head">
   <div class="header__bg"></div>
   <div class="name">
  <span class="first-letter">K</span><span>evin</span><span class="first-letter">H</span><span>eaghney</span>
  </div>
  <hr class="hr"></hr>
   <h2> Front End Developer</h2>
-  <br>
-  <pre>
-Started my voyage 4 years ago and have loved every second of it.
-As I passionately and creatively navigate through my journey,
-my mastery in Web Development and Design is growing everyday. </pre>
 </header>
 <body>
+<div class="aboutMe">
+  <h5>Started my journey 4 years ago in Web Development/Design and I continue everyday to perfect my craft. 
+Before taking this leap of faith I was working in Construction and blue collar jobs for many years.
+Happiness with what I was doing was non existent so I decided enough is enough.
+I've always felt I had more to offer, but at the time didn't know what that was. 
+My creativeness, eagerness to learn and curiosity would lead me down a path that was somewhat foriegn to me. <br><br>
+I've since invested everything I have into learning and developing my skills in Web Development/Design.
+It was the greatest decision I've ever made and has allowed me to find my true passion. 
+I've completed courses through W3Schools and Udacity, where I recieved my Front End Development Nanodegree.
+My projects consist of a memory game, arcade game, clock, calculator and a map. 
+I have working experience creating eCommerce Bookstores for a number of Colleges and Universities.
+I've also created an eCommerce site for a startup toffee company. <br><br>
+My journey is ongoing but I hope to find a position to utilize my talent and continue my growth. 
+What sets me apart from the rest is how I managed to get here and I hope to use my drive and passion wherever I work.
+ </h5>
+</div>
   <div class="buttonPDF">
     <a href="Resume2019.doc.html" class="resume" download>Resume</a>
   </div>
