--- a/AboutMe.html
+++ b/AboutMe.html
@@ -51,7 +51,7 @@ I've always felt I had more to offer, but at the time didn't know what that was.
 My creativeness, eagerness to learn and curiosity would lead me down a path that was somewhat foriegn to me. <br><br>
 I've since invested everything I have into learning and developing my skills in Web Development/Design.
 It was the greatest decision I've ever made and has allowed me to find my true passion. 
-I've completed courses through W3Schools and Udacity, where I recieved my Front End Development Nanodegree.
+I've completed courses through W3Schools and Udacity, where I received my Front End Development Nanodegree.
 My projects consist of a memory game, arcade game, clock, calculator and a map. 
 I have working experience creating eCommerce Bookstores for a number of Colleges and Universities.
 I've also created an eCommerce site for a startup toffee company. <br><br>
