--- a/AboutMe.html
+++ b/AboutMe.html
@@ -48,7 +48,7 @@
 Before taking this leap of faith I was working in Construction and blue collar jobs for many years.
 Happiness with what I was doing was non existent so I decided enough is enough.
 I've always felt I had more to offer, but at the time didn't know what that was. 
-My creativeness, eagerness to learn and curiosity would lead me down a path that was somewhat foriegn to me. <br><br>
+My creativeness, eagerness to learn and curiosity would lead me down a path that was somewhat foreign to me. <br><br>
 I've since invested everything I have into learning and developing my skills in Web Development/Design.
 It was the greatest decision I've ever made and has allowed me to find my true passion. 
 I've completed courses through W3Schools and Udacity, where I received my Front End Development Nanodegree.
