--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
  <span class="first-letter">K</span><span>evin</span><span class="first-letter">H</span><span>eaghney</span>
  </div>
  <hr class="hr"></hr>
-  <h2> Front End Developer</h2>
+  <h2> Front End Developer/Designer</h2>
   <br>
   <h4>Seeking an opportunity to grow and shine.</h4>
 </header>
@@ -93,7 +93,7 @@
   <div class="col-md-4 col-xs-6">
     <p class="nameTitle">
       Kevin Heaghney<br>
-      Front End Developer
+      Front End Developer/Designer
     </p>
   </div>
    <div class="col-md-4 col-xs-12">
