--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
  <hr class="hr"></hr>
   <h2> Front End Developer/Designer</h2>
   <br>
-  <h4>Seeking an opportunity to use my knowledge, creativity and skills to help your company reach its goals.</h4>
+  <div class="h4">
+      <h4>Seeking an opportunity to use my knowledge, creativity and skills to help your company reach its goals.</h4>
+</div>
+
 </header>
 
 <section>
