--- a/index.html
+++ b/index.html
@@ -54,8 +54,25 @@
 </section>
 
 <body>
+  <br>
+    <h3 class="w3-padding-25 w3-text-black">Projects</h3>
+    <br>
+    <div class="col-md-3 col-xs-6" id="projects">
+  <a href="fend-project-memory-game-master/memoryGame.html" id="gameLinks"><img src="Memory Game.jpg" id="image"></a>
+    </div>
+    <div class="col-md-3 col-xs-6" id="projects">
+      <a href="calculator-master/calculator.html" id="gameLinks"><img src="Calculator.jpg" id="image"></a>
+    </div>
+    <div class="col-md-3 col-xs-6" id="projects">
+      <a href="Clock-master/clock.html" id="gameLinks"><img src="clock.jpg" id="image"></a>
+    </div>
+  <div class="col-md-3 col-xs-6" id="projects">
+    <a href="arcade-game-master/arcadeGame.html" id="gameLinks"><img src="arcade game.jpg" id="image"></a>
+  </div>
+
   <div class="contain">
-    <h3 class="w3-padding-16 w3-text-black">My Skills</h3>
+  
+    <h3 class="w3-padding-25 w3-text-black">My Skills</h3>
     <p class="w3-wide">HTML</p>
     <div class="w3-black">
         <div class="w3-color" style="height:28px;width:95%"></div>
