--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 </nav>
 
 <header>
-  <div class="header__bg"></div>
+  <div class="container">
+    <img src="Globe.jpg" alt="globe" style="width:100%";>
   <div class="name">
     <span class="first-letter">K</span><span>evin</span><span class="first-letter">H</span><span>eaghney</span>
   </div>
@@ -47,11 +48,11 @@
   <div class="h4">
     <h4>Seeking an opportunity to use my knowledge, creativity and skills to help your company reach its goals.</h4>
   </div>
-
+</div>
 </header>
 
 <section>
-  <div class="parallax"></div>
+  <!--<div class="parallax"></div>-->
 
 </section>
 
