--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </nav>
 
 <header>
-  <div class="container">
+  <div class="container_a">
     <img src="Globe.jpg" alt="globe" style="width:100%";>
   <div class="name">
     <span class="first-letter">K</span><span>evin</span><span class="first-letter">H</span><span>eaghney</span>
