--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
   </hr>
   <h2> Front End Developer/Designer</h2>
   <br>
-  <div class="h4">
-    <h4>Seeking an opportunity to use my knowledge, creativity and skills to help your company reach its goals.</h4>
+  <div class="img1">
+      <img src="Globe.jpg" alt="globe" style="width:100px" style="height:100px";>
   </div>
 </div>
 </header>
