--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
   </hr>
   <h2> Front End Developer/Designer</h2>
   <br>
-  <div class="img1">
-      <img src="Globe.jpg" alt="globe" style="width:100px" style="height:100px";>
+  <div>
+      <img src="Globe.jpg" alt="globe" style="width:100px;height:100px;" class="img1">
   </div>
 </div>
 </header>
