--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <header>
   <div class="container_a">
-    <img src="Globe.jpg" alt="globe" style="width:100%";>
+    <img src="homepageIMG.jpg" alt="globe" style="width:100%";>
   <div class="name">
     <span class="first-letter">K</span><span>evin</span><span class="first-letter">H</span><span>eaghney</span>
   </div>
