--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
 <header>
   <div class="container_a">
     <img src="homepageIMG.jpg" alt="globe" style="width:100%";>
-  <div class="name">
+  <div class="name1">
     <span class="first-letter">K</span><span>evin</span><span class="first-letter">H</span><span>eaghney</span>
   </div>
   <hr class="hr">
   </hr>
-  <h2> Front End Developer/Designer</h2>
+  <h2 class="h21"> Front End Developer/Designer</h2>
   <br>
   <div>
       <img src="Globe.jpg" alt="globe" style="width:100px;height:100px;" class="img1">
