--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <h2 class="h21"> Front End Developer/Designer</h2>
   <br>
   <div>
-      <img src="Globe.jpg" alt="globe" style="width:100px;height:100px;" class="img1">
+      <i class="fa fa-download" style="width:100px;height:100px;" id="img1"></i>
   </div>
 </div>
 </header>
