--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <div>
       <i class="fa fa-download" style="width:100px;height:100px;" id="img1"></i>
   </div>
-  <div id="animate"><img src="jellyfish.png" alt="jellyfish"></div>
+  <div id="animate"><img src="jellyfish.png" alt="jellyfish" id="jellyFish"></div>
 </div>
 </header>
 
