--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <div class="carousel-item">
           <div class="col-12 col-md-4">
             <div class="card mb-2">
-              <img class="card-img-top" src="image.jpg"
+              <img class="card-img-top" src="arcade game.jpg"
                 alt="Card image cap">
               <div class="card-body">
                 <h4 class="card-title font-weight-bold">Card title</h4>
@@ -128,7 +128,7 @@
         <div class="carousel-item">
           <div class="col-12 col-md-4">
             <div class="card mb-2">
-              <img class="card-img-top" src="homepageIMG.jpg"
+              <img class="card-img-top" src="Memory Game.jpg"
                 alt="Card image cap">
               <div class="card-body">
                 <h4 class="card-title font-weight-bold">Card title</h4>
@@ -147,7 +147,7 @@
 
 
 
-
+<div class="col-md-6 col-sm-6">
   <h3 class="w3-padding-25 w3-text-black">Projects</h3>
   <br>
   <div class="col-md-3 col-xs-6" id="projects">
@@ -163,6 +163,7 @@
   <div class="col-md-3 col-xs-6" id="projects">
     <!--<a href="arcade-game-master/arcadeGame.html" id="gameLinks">--><img src="arcade game.jpg" id="image"></a>
   </div>
+</div>
 
   <div class="contain">
 
