--- a/index.html
+++ b/index.html
@@ -59,22 +59,22 @@
 
 <body>
   <br>
+  <section class="github">
+  <div class="col-md-6 col-sm-12">
+      <h3 class="w3-padding-25 w3-text-black">All my projects are on Github!</h3>
+  </div>
+  </section>
 
-  <h3 class="w3-padding-25 w3-text-black">Projects</h3>
   <br>
   <div class="col-md-3 col-xs-6" id="projects">
     <!--<a href="fend-project-memory-game-master/memoryGame.html" id="gameLinks">--><img src="Memory Game.jpg"
       id="image"></a>
   </div>
-  <div class="col-md-3 col-xs-6" id="projects">
-    <!-- <a href="calculator-master/calculator.html" id="gameLinks">--><img src="Calculator.jpg" id="image"></a>
-  </div>
-  <div class="col-md-3 col-xs-6" id="projects">
-    <!-- <a href="Clock-master/clock.html" id="gameLinks">--><img src="clock.jpg" id="image"></a>
-  </div>
+  
   <div class="col-md-3 col-xs-6" id="projects">
     <!--<a href="arcade-game-master/arcadeGame.html" id="gameLinks">--><img src="arcade game.jpg" id="image"></a>
   </div>
+</div>
 
 
   <div class="contain">
