--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <body>
   <br>
   <section class="github">
-  <div class="col-md-6 col-sm-12">
+  <div class="col-md-6 col-sm-12" id="github">
       <h3 class="w3-padding-25 w3-text-black">All my projects are on Github!</h3>
   </div>
   </section>
