--- a/index.html
+++ b/index.html
@@ -59,9 +59,10 @@
 
 <body>
   <br>
+  <div class="container" style="width:800px;">
   <section class="github">
   <div class="col-md-6 col-sm-12" id="github">
-      <h3 class="w3-padding-25 w3-text-black">All my projects are on Github!</h3>
+      <h3 class="w3-padding-25 w3-text-black" style="text-align:left;">All my projects are on Github!</h3>
   </div>
   </section>
 
@@ -74,6 +75,7 @@
   <div class="col-md-3 col-xs-6" id="projects">
     <!--<a href="arcade-game-master/arcadeGame.html" id="gameLinks">--><img src="arcade game.jpg" id="image"></a>
   </div>
+</div>
 </div>
 
 
