--- a/2019 Portfolio/index.html
+++ b/2019 Portfolio/index.html
@@ -36,43 +36,49 @@
 </nav>
 
 <header>
-  <div class="container">
-    <img src="Globe.jpg" alt="globe" style="width:100%";>
-  <div class="name">
+  <div class="container_a">
+    <img src="homepageIMG.jpg" alt="globe" style="width:100%";>
+  <div class="name1">
     <span class="first-letter">K</span><span>evin</span><span class="first-letter">H</span><span>eaghney</span>
   </div>
   <hr class="hr">
   </hr>
-  <h2> Front End Developer/Designer</h2>
+  <h2 class="h21"> Front End Developer/Designer</h2>
   <br>
-  <div class="h4">
-    <h4>Seeking an opportunity to use my knowledge, creativity and skills to help your company reach its goals.</h4>
+  <div>
+      <a href="Resume2019.pdf"><img src="downloadBtn.png" alt="download" id="img1"><br>Interested in my Resume?</a>
   </div>
+  <div id="animate"><img src="jellyfish.png" alt="jellyfish" id="jellyFish"></div>
 </div>
 </header>
 
 <section>
-  <!--<div class="parallax"></div>-->
+  
 
 </section>
 
 <body>
   <br>
-  <h3 class="w3-padding-25 w3-text-black">Projects</h3>
+  <div class="container" style="max-width:1000px;">
+  <section class="github">
+  <div class="col-md-6 col-sm-12" id="github">
+      <h3 class="w3-padding-25 w3-text-black" style="text-align:left;">All my projects are on Github!</h3>
+      <w3-text-black>ALot of the personal projects I have made I keep on Github. You can follow the link below to view what I currently have uploaded. </w3-text-black>
+    </div>
+  </section>
+
   <br>
   <div class="col-md-3 col-xs-6" id="projects">
     <!--<a href="fend-project-memory-game-master/memoryGame.html" id="gameLinks">--><img src="Memory Game.jpg"
       id="image"></a>
   </div>
-  <div class="col-md-3 col-xs-6" id="projects">
-    <!-- <a href="calculator-master/calculator.html" id="gameLinks">--><img src="Calculator.jpg" id="image"></a>
-  </div>
-  <div class="col-md-3 col-xs-6" id="projects">
-    <!-- <a href="Clock-master/clock.html" id="gameLinks">--><img src="clock.jpg" id="image"></a>
-  </div>
+  
   <div class="col-md-3 col-xs-6" id="projects">
     <!--<a href="arcade-game-master/arcadeGame.html" id="gameLinks">--><img src="arcade game.jpg" id="image"></a>
   </div>
+</div>
+</div>
+
 
   <div class="contain">
 
@@ -144,7 +150,17 @@
       </div>
     </div>
     </div>
-
+    <script>
+$(document).ready(function(e) {
+  var width = "+=" + $(document).width();
+  $("#animate").animate({
+    left: width
+  }, 5000, function() {
+  $("animate").css("display", "none");
+  
+  });
+  });
+</script>
   </footer>
 </body>
 
