--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <h2 class="h21"> Front End Developer/Designer</h2>
   <br>
   <div>
-      <i class="fa fa-download" style="width:100px;height:100px;" id="img1"></i>
+      <a href="Resume2019.pdf"><img src="downloadBtn.png" alt="download" id="img1"><br>Interested in my Resume?</a>
   </div>
   <div id="animate"><img src="jellyfish.png" alt="jellyfish" id="jellyFish"></div>
 </div>
@@ -59,11 +59,12 @@
 
 <body>
   <br>
-  <div class="container" style="width:800px;">
+  <div class="container" style="max-width:1000px;">
   <section class="github">
   <div class="col-md-6 col-sm-12" id="github">
       <h3 class="w3-padding-25 w3-text-black" style="text-align:left;">All my projects are on Github!</h3>
-  </div>
+      <w3-text-black>ALot of the personal projects I have made I keep on Github. You can follow the link below to view what I currently have uploaded. </w3-text-black>
+    </div>
   </section>
 
   <br>
