--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <h2 class="h21"> Front End Developer/Designer</h2>
   <br>
   <div>
-      <a href="Resume2019.pdf"><img src="downloadBtn.png" alt="download" id="img1"><br>Interested in my Resume?</a>
+      <a href="Resume2019.pdf" id="img0"><img src="downloadBtn.png" alt="download" id="img1"><br>Interested in my Resume?</a>
   </div>
   <div id="animate"><img src="jellyfish.png" alt="jellyfish" id="jellyFish"></div>
 </div>
@@ -62,9 +62,9 @@
   <div class="container" style="max-width:1000px;">
   <section class="github">
   <div class="col-md-6 col-sm-12" id="github">
-      <h3 class="w3-padding-25 w3-text-black" style="text-align:left;">All my projects are on Github!</h3>
-      <w3-text-black>ALot of the personal projects I have made I keep on Github. You can follow the link below to view what I currently have uploaded. </w3-text-black>
+      <h3 class="w3-padding-25 w3-text-black" style="text-align:left;">My projects are on Github!</h3>
     </div>
+    <w3-text-black>Alot of the personal projects I have made I keep on Github. You can follow the link below to view what I currently have uploaded. <br> <a href="https://github.com/kheaghney">Github</a> </w3-text-black>
   </section>
 
   <br>
