--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <h2 class="h21"> Front End Developer/Designer</h2>
   <br>
   <div>
-      <a href="Resume2019.pdf" id="img0"><img src="downloadBtn.png" alt="download" id="img1"><br>Interested in my Resume?</a>
+      <a href="Resume2019.pdf" id="img1"><img src="downloadBtn.png" alt="download" id="img1"><br><p class="img0">Interested in my Resume?</p></a>
   </div>
   <div id="animate"><img src="jellyfish.png" alt="jellyfish" id="jellyFish"></div>
 </div>
@@ -63,8 +63,9 @@
   <section class="github">
   <div class="col-md-6 col-sm-12" id="github">
       <h3 class="w3-padding-25 w3-text-black" style="text-align:left;">My projects are on Github!</h3>
-    </div>
+    
     <w3-text-black>Alot of the personal projects I have made I keep on Github. You can follow the link below to view what I currently have uploaded. <br> <a href="https://github.com/kheaghney">Github</a> </w3-text-black>
+  </div>
   </section>
 
   <br>
