--- a/index.html
+++ b/index.html
@@ -61,10 +61,9 @@
   <br>
   <div class="container" style="max-width:1000px;">
   <section class="github">
-  <div class="col-md-6 col-sm-12" id="github">
-      <h3 class="w3-padding-25 w3-text-black" style="text-align:left;">My projects are on Github!</h3>
-    
-    <w3-text-black>Alot of the personal projects I have made I keep on Github. You can follow the link below to view what I currently have uploaded. <br> <a href="https://github.com/kheaghney">Github</a> </w3-text-black>
+  <div class="col-md-6 col-sm-12" id="github" style="padding:30px">   
+    <w3-text-black>Alot of the personal projects I have made I keep on Github. You can follow the link below to view what I currently have uploaded.</w3-text-black>
+    <a href="https://github.com/kheaghney"><img src="githubLogo1.png"></a> 
   </div>
   </section>
 
