--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <h2 class="h21"> Front End Developer/Designer</h2>
   <br>
   <div>
-      <a href="Resume2019.pdf" id="img1"><img src="downloadBtn.png" alt="download" id="img1"><br><p class="img0">Interested in my Resume?</p></a>
+      <a href="Resume (1).pdf" id="img1"><img src="downloadBtn.png" alt="download" id="img1"><br><p class="img0">Download Resume?</p></a>
   </div>
   <div id="animate"><img src="jellyfish.png" alt="jellyfish" id="jellyFish"></div>
 </div>
@@ -62,8 +62,8 @@
   <div class="container" style="max-width:1000px;">
   <section class="github">
   <div class="col-md-6 col-sm-12" id="github" style="padding:30px">   
-    <w3-text-black>Alot of the personal projects I have made I keep on Github. You can follow the link below to view what I currently have uploaded.</w3-text-black>
-    <a href="https://github.com/kheaghney"><img src="githubLogo1.png"></a> 
+    <w3-text-black>Alot of the personal projects I have made I keep on Github. You can follow the link below to view what I currently have uploaded.</w3-text-black><br>
+    <a href="https://github.com/kheaghney"><img src="githubLogo1.png" style="width:90px;"></a> 
   </div>
   </section>
 
