--- a/index.html
+++ b/index.html
@@ -79,6 +79,11 @@
 </div>
 </div>
 
+<div class="cotainer_a">
+  <div class="col-md-6 col-sm-12">
+    <img src="IMG_0328.jpg" alt="portrait" id="myImg">
+  </div>
+</div>
 
   <div class="contain">
 
