--- a/index.html
+++ b/index.html
@@ -79,11 +79,12 @@
 </div>
 </div>
 
-<div class="cotainer_a">
+<div class="cotainer" style="max-width:1000px;">
   <div class="col-md-6 col-sm-12">
     <img src="IMG_0328.jpg" alt="portrait" id="myImg">
   </div>
 </div>
+<br>
 
   <div class="contain">
 
