--- a/index.html
+++ b/index.html
@@ -77,11 +77,12 @@
     <!--<a href="arcade-game-master/arcadeGame.html" id="gameLinks">--><img src="arcade game.jpg" id="image"></a>
   </div>
 </div>
-</div>
 
-<div class="cotainer" style="max-width:1000px;">
   <div class="col-md-6 col-sm-12">
     <img src="IMG_0328.jpg" alt="portrait" id="myImg">
+  </div>
+  <div class="col-md-6 col-sm-12">
+      <w3-text-black>Started my journey 4 years ago in Web Development/Design and I continue everyday to perfect my craft.<br><a href="AboutMe.html">Read More</a></w3-text-black>
   </div>
 </div>
 <br>
