--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
   <div class="col-md-3 col-xs-6" id="projects">
     <!--<a href="arcade-game-master/arcadeGame.html" id="gameLinks">--><img src="arcade game.jpg" id="image"></a>
   </div>
-
-
+</div>
+<div class="container" style="max-width:1000px;">
   <div class="col-md-6 col-sm-12">
     <img src="IMG_0328.jpg" alt="portrait" id="myImg">
   </div>
@@ -85,46 +85,10 @@
       <w3-text-black>Started my journey 4 years ago in Web Development/Design and I continue everyday to perfect my craft.<br><a href="AboutMe.html">Read More</a></w3-text-black>
   </div>
 </div>
-</div>
+
 <br>
 
-  <div class="contain">
-
-    <h3 class="w3-padding-25 w3-text-black">My Skills</h3>
-    <p class="w3-wide">HTML</p>
-    <div class="w3-black">
-      <div class="w3-color" style="height:28px;width:95%"></div>
-    </div>
-    <p class="w3-wide">CSS</p>
-    <div class="w3-black">
-      <div class="w3-color" style="height:28px;width:95%"></div>
-    </div>
-    <p class="w3-wide">JavaScript</p>
-    <div class="w3-black">
-      <div class="w3-color" style="height:28px;width:70%"></div>
-    </div>
-    <p class="w3-wide">Bootstrap</p>
-    <div class="w3-black">
-      <div class="w3-color" style="height:28px;width:85%"></div>
-    </div>
-    <p class="w3-wide">GitHub</p>
-    <div class="w3-black">
-      <div class="w3-color" style="height:28px;width:85%"></div>
-    </div>
-    <p class="w3-wide">UX/UI</p>
-    <div class="w3-black">
-      <div class="w3-color" style="height:28px;width:60%"></div>
-    </div>
-    <p class="w3-wide">JQuery</p>
-    <div class="w3-black">
-      <div class="w3-color" style="height:28px;width:60%"></div>
-    </div>
-    <p class="w3-wide">Responsive Design</p>
-    <div class="w3-black">
-      <div class="w3-color" style="height:28px;width:90%"></div>
-    </div><br><br>
-  </div>
-
+  
 
   <footer>
     <div class="footer">
