--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <!--<a href="arcade-game-master/arcadeGame.html" id="gameLinks">--><img src="arcade game.jpg" id="image"></a>
   </div>
 </div>
-<div class="container" style="max-width:1000px;">
+<div class="container1" style="max-width:1000px;">
   <div class="col-md-6 col-sm-12">
     <img src="IMG_0328.jpg" alt="portrait" id="myImg">
   </div>
@@ -85,7 +85,7 @@
       <w3-text-black>Started my journey 4 years ago in Web Development/Design and I continue everyday to perfect my craft.<br><a href="AboutMe.html">Read More</a></w3-text-black>
   </div>-->
   <div class="col-md-6 col-sm-12">
-      <w3-text-black>Started my journey 4 years ago in Web Development/Design and I continue everyday to perfect my craft<p class="readMmore" data-toggle="collapse" data-target="#readMore">Read More</p></w3-text-black>
+      <w3-text-black>Started my journey 4 years ago in Web Development/Design and I continue everyday to perfect my craft<p class="readMmore" data-toggle="collapse" data-target="#demo"><strong>Read More</strong></p></w3-text-black>
       <div id="demo" class="collapse">
           Before taking this leap of faith I was working in Construction and blue collar jobs for many years. Happiness with what I was doing was non existent so I decided enough is enough. I've always felt I had more to offer, but at the time didn't know what that was. My creativeness, eagerness to learn and curiosity would lead me down a path that was somewhat foreign to me.
 
