--- a/index.html
+++ b/index.html
@@ -85,7 +85,9 @@
       <w3-text-black>Started my journey 4 years ago in Web Development/Design and I continue everyday to perfect my craft.<br><a href="AboutMe.html">Read More</a></w3-text-black>
   </div>-->
   <div class="col-md-6 col-sm-12">
-      <w3-text-black>Started my journey 4 years ago in Web Development/Design and I continue everyday to perfect my craft<p class="readMmore" data-toggle="collapse" data-target="#demo"><strong>Read More</strong></p></w3-text-black>
+    <h3 class="nameBio">Kevin Heaghney</h3><br>
+    <w3-text-black>Web Deisgner/Developer</w3-text-black><br>
+      <w3-text-black>Started my journey 4 years ago in Web Development/Design and I continue everyday to perfect my craft.<p class="readMmore" data-toggle="collapse" data-target="#demo"><strong><br>Read More</strong></p></w3-text-black>
       <div id="demo" class="collapse">
           Before taking this leap of faith I was working in Construction and blue collar jobs for many years. Happiness with what I was doing was non existent so I decided enough is enough. I've always felt I had more to offer, but at the time didn't know what that was. My creativeness, eagerness to learn and curiosity would lead me down a path that was somewhat foreign to me.
 
