--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
   <div class="name1">
     <span class="first-letter">K</span><span>evin</span><span class="first-letter">H</span><span>eaghney</span>
   </div>
-  <hr class="hr">
-  </hr>
+ 
   <h2 class="h21"> Front End Developer/Designer</h2>
   <br>
   <div>
@@ -62,7 +61,8 @@
   <div class="container" style="max-width:1000px;">
   <section class="github">
   <div class="col-md-6 col-sm-12" id="github" style="padding:30px">   
-    <w3-text-black>Alot of the personal projects I have made I keep on Github. You can follow the link below to view what I currently have uploaded.</w3-text-black><br>
+    <h3 class="proj" style="text-align:center">Projects</h3>
+    <w3-text-black>Most of the projects I have made are uploaded on Github. If you would like to view the source code or play one of the games I have made please click the Github link below. </w3-text-black><br>
     <a href="https://github.com/kheaghney"><img src="githubLogo1.png" style="width:90px;"></a> 
   </div>
   </section>
@@ -84,7 +84,9 @@
   <!--<div class="col-md-6 col-sm-12">
       <w3-text-black>Started my journey 4 years ago in Web Development/Design and I continue everyday to perfect my craft.<br><a href="AboutMe.html">Read More</a></w3-text-black>
   </div>-->
-  <div class="col-md-6 col-sm-12">
+</div>
+<div class="container1" style="max-width:1000px;">
+  <div class="col-md-6 col-sm-12" id="bio">
     <h3 class="nameBio">Kevin Heaghney</h3><br>
     <w3-text-black>Web Deisgner/Developer</w3-text-black><br>
       <w3-text-black>Started my journey 4 years ago in Web Development/Design and I continue everyday to perfect my craft.<p class="readMmore" data-toggle="collapse" data-target="#demo"><strong><br>Read More</strong></p></w3-text-black>
@@ -97,7 +99,11 @@
       </div>
   </div>
 </div>
-
+<div class="container01" style="max-width:100%;">
+<div class="col-md-12">
+  <h1>Hello</h1>
+</div>
+</div>
 <br>
 
   
