--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <div class="container" style="max-width:1000px;">
   <section class="github">
   <div class="col-md-6 col-sm-12" id="github" style="padding:30px">   
-    <h3 class="proj" style="text-align:center">Projects</h3>
+    <h3 class="proj" style="text-align:left">Projects</h3>
     <w3-text-black>Most of the projects I have made are uploaded on Github. If you would like to view the source code or play one of the games I have made please click the Github link below. </w3-text-black><br>
     <a href="https://github.com/kheaghney"><img src="githubLogo1.png" style="width:90px;"></a> 
   </div>
@@ -84,8 +84,6 @@
   <!--<div class="col-md-6 col-sm-12">
       <w3-text-black>Started my journey 4 years ago in Web Development/Design and I continue everyday to perfect my craft.<br><a href="AboutMe.html">Read More</a></w3-text-black>
   </div>-->
-</div>
-<div class="container1" style="max-width:1000px;">
   <div class="col-md-6 col-sm-12" id="bio">
     <h3 class="nameBio">Kevin Heaghney</h3><br>
     <w3-text-black>Web Deisgner/Developer</w3-text-black><br>
