--- a/index.html
+++ b/index.html
@@ -97,9 +97,31 @@
       </div>
   </div>
 </div>
-<div class="container01" style="max-width:100%;">
-<div class="col-md-12">
-  <h1>Hello</h1>
+<div class="container01" style="max-width:1000px;">
+<div class="col-md-6 col-md-12">
+  <h1>Skills</h1><br>
+  <w3-text-black>Everyday I'm learning and pushing myself to do more, but here are some of my current skills.  </w3-text-black>
+</div>
+<div class="col-md-6 col-sm-12">
+  <ul class="skillList">
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>Bootstrap</li>
+    <li>JavaScript</li>
+    <li>PHP</li>
+    <li>CMS</li>
+    <li>Wordpress</li>
+    <li>DNN</li>
+    <li>Squarespace</li>
+    <li>Photoshop</li>
+    <li>Filezilla (FTP)</li>
+    <li>Responsive Design</li>
+    <li>DevTools</li>
+    <li>UI/UX</li>
+    <li>GitHub</li>
+    <li>Googke Suite</li>
+    <li>Microsoft Office</li>
+  </ul>
 </div>
 </div>
 <br>
