--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
   </div>
 </div>
 <div class="container01" style="max-width:1000px;">
-<div class="col-md-6 col-md-12">
-  <h1>Skills</h1><br>
+<div class="col-md-6 col-md-12" id="skills">
+  <h3>Skills</h3><br> 
   <w3-text-black>Everyday I'm learning and pushing myself to do more, but here are some of my current skills.  </w3-text-black>
 </div>
-<div class="col-md-6 col-sm-12">
+<div class="col-md-3 col-sm-6">
   <ul class="skillList">
     <li>HTML</li>
     <li>CSS</li>
@@ -113,6 +113,9 @@
     <li>Wordpress</li>
     <li>DNN</li>
     <li>Squarespace</li>
+  </ul>
+  <div class="col-md-3 col-sm-6">
+    <ul class="skillList">
     <li>Photoshop</li>
     <li>Filezilla (FTP)</li>
     <li>Responsive Design</li>
@@ -124,7 +127,7 @@
   </ul>
 </div>
 </div>
-<br>
+
 
   
 
