--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   </div>-->
   <div class="col-md-6 col-sm-12" id="bio">
     <h3 class="nameBio">Kevin Heaghney</h3><br>
-    <w3-text-black>Web Deisgner/Developer</w3-text-black><br>
+    <p><strong>Web Deisgner/Developer</strong></p><br>
       <w3-text-black>Started my journey 4 years ago in Web Development/Design and I continue everyday to perfect my craft.<p class="readMmore" data-toggle="collapse" data-target="#demo"><strong><br>Read More</strong></p></w3-text-black>
       <div id="demo" class="collapse">
           Before taking this leap of faith I was working in Construction and blue collar jobs for many years. Happiness with what I was doing was non existent so I decided enough is enough. I've always felt I had more to offer, but at the time didn't know what that was. My creativeness, eagerness to learn and curiosity would lead me down a path that was somewhat foreign to me.
@@ -98,11 +98,11 @@
   </div>
 </div>
 <div class="container01" style="max-width:1000px;">
-<div class="col-md-6 col-md-12" id="skills">
+<div class="col-md-6 col-md-12" id="skills" style="text-align:left;">
   <h3>Skills</h3><br> 
   <w3-text-black>Everyday I'm learning and pushing myself to do more, but here are some of my current skills.  </w3-text-black>
 </div>
-<div class="col-md-3 col-sm-6">
+<div class="col-md-3 col-sm-6 col-xs-6">
   <ul class="skillList">
     <li>HTML</li>
     <li>CSS</li>
@@ -115,7 +115,7 @@
     <li>Squarespace</li>
   </ul>
 </div>
-  <div class="col-md-3 col-sm-6">
+  <div class="col-md-3 col-sm-6 col-xs-6">
     <ul class="skillList">
     <li>Photoshop</li>
     <li>Filezilla (FTP)</li>
@@ -123,7 +123,7 @@
     <li>DevTools</li>
     <li>UI/UX</li>
     <li>GitHub</li>
-    <li>Googke Suite</li>
+    <li>Google Suite</li>
     <li>Microsoft Office</li>
   </ul>
 </div>
