--- a/index.html
+++ b/index.html
@@ -45,8 +45,9 @@
   <h2 class="h21"> Front End Developer/Designer</h2>
   <br>
   <div>
-      <a href="Resume (2).pdf" id="img1"><img src="downloadBtn.png" alt="download" id="img1"><br><p class="img0">Download Resume?</p></a>
+      <a href="Resume_1.pdf" id="img1"><img src="downloadBtn.png" alt="download" id="img1"><br><p class="img0">Download Resume?</p></a>
   </div>
+
   <div id="animate"><img src="jellyfish.png" alt="jellyfish" id="jellyFish"></div>
 </div>
 </header>
@@ -86,7 +87,7 @@
   </div>-->
   <div class="col-md-6 col-sm-12" id="bio">
     <h3 class="nameBio">Kevin Heaghney</h3><br>
-    <p><strong>Web Deisgner/Developer</strong></p><br>
+    <p><strong>Front End Developer/Designer</strong></p><br>
       <w3-text-black>Started my journey 4 years ago in Web Development/Design and I continue everyday to perfect my craft.<p class="readMmore" data-toggle="collapse" data-target="#demo"><strong><br>Read More</strong></p></w3-text-black>
       <div id="demo" class="collapse">
           Before taking this leap of faith I was working in Construction and blue collar jobs for many years. Happiness with what I was doing was non existent so I decided enough is enough. I've always felt I had more to offer, but at the time didn't know what that was. My creativeness, eagerness to learn and curiosity would lead me down a path that was somewhat foreign to me.
@@ -99,7 +100,7 @@
 </div>
 <div class="container01" style="max-width:1000px;">
 <div class="col-md-6 col-md-12" id="skills" style="text-align:left;">
-  <h3>Skills</h3><br> 
+  <h3 class="skill" style="text-align:left">Skills</h3><br> 
   <w3-text-black>Everyday I'm learning and pushing myself to do more, but here are some of my current skills.  </w3-text-black>
 </div>
 <div class="col-md-3 col-sm-6 col-xs-6">
