--- a/AboutMe.html
+++ b/AboutMe.html
@@ -60,7 +60,7 @@ What sets me apart from the rest is how I managed to get here and I hope to use 
  </h5>
 </div>
   <div class="buttonPDF">
-    <a href="Resume2019.doc.html" class="resume" download>Resume</a>
+    <a href="Resume_1.pdf" class="resume" download>Resume</a>
   </div>
   <footer>
       <div class="footer">
