--- a/ContactInfo.html
+++ b/ContactInfo.html
@@ -41,13 +41,14 @@
  </div>
  <hr class="hr"></hr>
   <h2> Front End Developer/Designer</h2>
-<div class="col-md-6 col-sm-12 col-xs-12">
   <div class="contact">
+    <h2 class="contactHead" style="text-shadow:none;"></h2>
+<div class="col-md-6 col-sm-12 col-xs-12" id="spanIcon" style="text-shadow:none;">
     <span class="glyphicon glyphicon-earphone">
       314.578.9129
     </span>
   </div>
-  <div class="col-md-6 col-sm-12 col-xs-12">
+  <div class="col-md-6 col-sm-12 col-xs-12" id="spanIcon" style="text-shadow:none;">
       <span class="glyphicon glyphicon-envelope">
           <a href="mailto:kheaghney1@gmail.com">Reach Out</a> 
         </span>
