--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
   <div class="col-md-6 col-sm-12" id="bio">
     <h3 class="nameBio">Kevin Heaghney</h3><br>
     <p><strong>Front End Developer/Designer</strong></p><br>
-      <w3-text-black>Started my journey 4 years ago in Web Development/Design and I continue everyday to perfect my craft.<p class="readMmore" data-toggle="collapse" data-target="#demo"><strong><br>Read More</strong></p></w3-text-black>
+      <w3-text-black>Started my journey 4 years ago in Web Development/Design and I continue everyday to perfect my craft.<p class="readMmore" data-toggle="collapse" data-target="#demo"><i class="fa fa-level-down" id="arrow"></i><strong><br>Read More</strong></p></w3-text-black>
       <div id="demo" class="collapse">
           Before taking this leap of faith I was working in Construction and blue collar jobs for many years. Happiness with what I was doing was non existent so I decided enough is enough. I've always felt I had more to offer, but at the time didn't know what that was. My creativeness, eagerness to learn and curiosity would lead me down a path that was somewhat foreign to me.<br><br>
           I've since invested everything I have into learning and developing my skills in Web Development/Design. It was the greatest decision I've ever made and has allowed me to find my true passion. I've completed courses through W3Schools and Udacity, where I received my Front End Development Nanodegree. My projects consist of a memory game, arcade game, clock, calculator and a map. I have working experience creating eCommerce Bookstores for a number of Colleges and Universities. I've also created an eCommerce site for a startup toffee company.<br><br>
