--- a/ContactInfo.html
+++ b/ContactInfo.html
@@ -42,14 +42,14 @@
  <hr class="hr"></hr>
   <h2> Front End Developer/Designer</h2>
   <div class="contact">
-    <h2 class="contactHead" style="text-shadow:none;"></h2>
-<div class="col-md-6 col-sm-12 col-xs-12" id="spanIcon" style="text-shadow:none;">
-    <span class="glyphicon glyphicon-earphone">
+    <h2 class="contactHead">Please Reach Out</h2>
+<div class="col-md-6 col-sm-12 col-xs-12">
+    <span class="glyphicon glyphicon-earphone" id="spanIcon">
       314.578.9129
     </span>
   </div>
-  <div class="col-md-6 col-sm-12 col-xs-12" id="spanIcon" style="text-shadow:none;">
-      <span class="glyphicon glyphicon-envelope">
+  <div class="col-md-6 col-sm-12 col-xs-12">
+      <span class="glyphicon glyphicon-envelope" id="spanIcon">
           <a href="mailto:kheaghney1@gmail.com">Reach Out</a> 
         </span>
     </div>
