--- a/2019 Portfolio/ContactInfo.html
+++ b/2019 Portfolio/ContactInfo.html
@@ -41,17 +41,22 @@
  </div>
  <hr class="hr"></hr>
   <h2> Front End Developer/Designer</h2>
-</header>
-<body>
   <div class="contact">
-    <span class="glyphicon glyphicon-earphone">
+    <h2 class="contactHead">Please Reach Out</h2>
+<div class="col-md-6 col-sm-12 col-xs-12">
+    <span class="glyphicon glyphicon-earphone" id="spanIcon">
       314.578.9129
     </span>
-    <br>
-    <span class="glyphicon glyphicon-envelope">
-       kheaghney1@gmail.com
-    </span>
   </div>
+  <div class="col-md-6 col-sm-12 col-xs-12">
+      <span class="glyphicon glyphicon-envelope" id="spanIcon">
+          <a href="mailto:kheaghney1@gmail.com">Reach Out</a> 
+        </span>
+    </div>
+</div>
+</header>
+<body>
+   
   <footer>
       <div class="footer">
         <div class="col-md-4 col-xs-6">
