--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             $(window).scroll( function(){
            
                 /* Check the location of each desired element */
-                $('.container01').each( function(i){
+                $('.skillList').each( function(i){
                    
                     var bottom_of_object = $(this).offset().top + $(this).outerHeight();
                     var bottom_of_window = $(window).scrollTop() + $(window).height();
