--- a/ContactInfo.html
+++ b/ContactInfo.html
@@ -42,7 +42,8 @@
  <hr class="hr"></hr>
   <h2> Front End Developer/Designer</h2>
   <div class="contact">
-    <h2 class="contactHead">Please Reach Out</h2>
+    <h2 class="contactHead">Reach Out</h2>
+    <hr class="hr01">
 <div class="col-md-6 col-sm-12 col-xs-12">
     <span class="glyphicon glyphicon-earphone" id="spanIcon">
       314.578.9129
