--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
   <br>
   <div class="col-md-3 col-xs-6" id="projects">
-    <!--<a href="fend-project-memory-game-master/memoryGame.html" id="gameLinks">--><img src="Memory Game.jpg"
+    <a href="index01.html" id="gameLinks"><img src="Memory Game.jpg"
       id="image"></a>
   </div>
   
