--- a/ContactInfo.html
+++ b/ContactInfo.html
@@ -26,7 +26,7 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
         <li><a href="AboutMe.html">About Me</a></li>
-        <li><a href="https://github.com/kheaghney">Projects</a></li>
+        <!--<li><a href="https://github.com/kheaghney">Projects</a></li>-->
         <li><a href="ContactInfo.html">Contact Info</a></li>
       </ul>
      
@@ -69,7 +69,7 @@
          <div class="col-md-4 col-xs-12">
            <p class="socialMedia">
             <a href="AboutMe.html" class="btmLinks">About Me</a>
-             <a href="https://github.com/kheaghney" class="btmLinks">Projects</a>
+             <!--<a href="https://github.com/kheaghney" class="btmLinks">Projects</a>-->
              <a href="ContactInfo.html" class="btmLink">Contact Info</a>
              <br>
              <a href="https://www.facebook.com/kevin.heaghney" class="fa fa-facebook"></a>
