--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
         <li><a href="AboutMe.html">About Me</a></li>
-        <li><a href="https://github.com/kheaghney">Projects</a></li>
+        <!--<li><a href="https://github.com/kheaghney">Projects</a></li>-->
         <li><a href="ContactInfo.html">Contact Info</a></li>
       </ul>
 
@@ -45,7 +45,7 @@
   <h2 class="h21"> Front End Developer/Designer</h2>
   <br>
   <div>
-      <a href="Resume_1.pdf" id="img1"><img src="downloadBtn.png" alt="download" id="img1"><br><p class="img0">Download Resume?</p></a>
+      <a href="Kevin.Heaghney.pdf" id="img1"><img src="downloadBtn.png" alt="download" id="img1"><br><p class="img0">Download Resume?</p></a>
   </div>
   <div class="popup" onclick="myFunction()"><p class="connect">Contact</p>
       <span class="popuptext" id="myPopup">CONTACT:<br>314.578.9129<br><a href="mailto:kheaghney1@gmail.com">Email</a></span>
@@ -72,7 +72,7 @@
 
   <br>
   <div class="col-md-3 col-xs-6" id="projects">
-    <a href="index01.html" id="gameLinks"><img src="Memory Game.jpg"
+    <!--<a href="index01.html" id="gameLinks">--><img src="Memory Game.jpg"
       id="image"></a>
   </div>
   
@@ -144,7 +144,7 @@
       <div class="col-md-4 col-xs-12">
         <p class="socialMedia">
           <a href="AboutMe.html" class="btmLinks">About Me</a>
-          <a href="https://github.com/kheaghney" class="btmLinks">Projects</a>
+          <!--<a href="https://github.com/kheaghney" class="btmLinks">Projects</a>-->
           <a href="ContactInfo.html" class="btmLink">Contact Info</a>
           <br>
           <a href="https://www.facebook.com/kevin.heaghney" class="fa fa-facebook"></a>
