--- a/AboutMe.html
+++ b/AboutMe.html
@@ -26,7 +26,7 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
           <li><a href="AboutMe.html">About Me</a></li>
-        <li><a href="https://github.com/kheaghney">Projects</a></li>
+        <!--<li><a href="https://github.com/kheaghney">Projects</a></li>-->
         <li><a href="ContactInfo.html">Contact Info</a></li>
       </ul>
      
@@ -60,7 +60,7 @@ What sets me apart from the rest is how I managed to get here and I hope to use 
  </h5>
 </div>
   <div class="buttonPDF">
-    <a href="Resume_1.pdf" class="resume" download>Resume</a>
+    <a href="Kevin.Heaghney.pdf" class="resume" download>Resume</a>
   </div>
   <footer>
       <div class="footer">
@@ -73,7 +73,7 @@ What sets me apart from the rest is how I managed to get here and I hope to use 
          <div class="col-md-4 col-xs-12">
            <p class="socialMedia">
               <a href="AboutMe.html" class="btmLinks">About Me</a>
-             <a href="https://github.com/kheaghney" class="btmLinks">Projects</a>
+             <!--<a href="https://github.com/kheaghney" class="btmLinks">Projects</a>-->
              <a href="ContactInfo.html" class="btmLink">Contact Info</a>
              <br>
              <a href="https://www.facebook.com/kevin.heaghney" class="fa fa-facebook"></a>
