--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   <section class="github">
   <div class="col-md-6 col-sm-12" id="github" style="padding:30px">   
     <h3 class="proj" style="text-align:left">Projects</h3>
-    <w3-text-black>Most of the projects I have made are uploaded on Github. If you would like to view the source code or play one of the games I have, please visit the Github link below. </w3-text-black><br>
+    <w3-text-black>Most of the projects I have made are uploaded on Github. If you would like to view the source code, please visit the Github link below. </w3-text-black><br>
     <a href="https://github.com/kheaghney"><img src="githubLogo1.png" style="width:90px;"></a> 
   </div>
   </section>
