--- a/2019 Portfolio/ContactInfo.html
+++ b/2019 Portfolio/ContactInfo.html
@@ -26,7 +26,7 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
         <li><a href="AboutMe.html">About Me</a></li>
-        <li><a href="https://github.com/kheaghney">Projects</a></li>
+        <!--<li><a href="https://github.com/kheaghney">Projects</a></li>-->
         <li><a href="ContactInfo.html">Contact Info</a></li>
       </ul>
      
@@ -42,7 +42,8 @@
  <hr class="hr"></hr>
   <h2> Front End Developer/Designer</h2>
   <div class="contact">
-    <h2 class="contactHead">Please Reach Out</h2>
+    <h2 class="contactHead">Reach Out</h2>
+    <hr class="hr01">
 <div class="col-md-6 col-sm-12 col-xs-12">
     <span class="glyphicon glyphicon-earphone" id="spanIcon">
       314.578.9129
@@ -50,7 +51,7 @@
   </div>
   <div class="col-md-6 col-sm-12 col-xs-12">
       <span class="glyphicon glyphicon-envelope" id="spanIcon">
-          <a href="mailto:kheaghney1@gmail.com">Reach Out</a> 
+          <a href="mailto:kheaghney1@gmail.com">Email</a> 
         </span>
     </div>
 </div>
@@ -68,7 +69,7 @@
          <div class="col-md-4 col-xs-12">
            <p class="socialMedia">
             <a href="AboutMe.html" class="btmLinks">About Me</a>
-             <a href="https://github.com/kheaghney" class="btmLinks">Projects</a>
+             <!--<a href="https://github.com/kheaghney" class="btmLinks">Projects</a>-->
              <a href="ContactInfo.html" class="btmLink">Contact Info</a>
              <br>
              <a href="https://www.facebook.com/kevin.heaghney" class="fa fa-facebook"></a>
