--- a/AboutMe.html
+++ b/AboutMe.html
@@ -44,11 +44,11 @@
 </header>
 <body>
 <div class="aboutMe">
-  <h5>After working Construction and blue collar jobs for many years, I realized I had more to offer. But, at the time didn't know what that was. Ultimately, my creativity, eagerness to learn and curiosity lead me into the Web Development/Design technology field.<br><br>
+  <h5>I started my journey 4 years ago in Web Development/Design and I continue to perfect my craft everyday. After working Construction and blue collar jobs for many years, I realized I had more to offer. But, at the time didn't know what that was. Ultimately, my creativity, eagerness to learn and curiosity lead me into the Web Development/Design technology field.<br><br>
 
     I've invested everything I have into learning and developing my skills. And, it was the greatest decision I've ever made, and has allowed me to find my true passion. I've completed courses through W3Schools and Udacity, where I received my Front End Development Nanodegree. I have working experience creating eCommerce Bookstores for a number of Colleges and Universities, an eCommerce site for a startup toffee company and front end web design.<br><br>
     
-    My journey is ongoing. But, I hope to find a position to utilize my talent and continue my professional growth. What sets me apart is the journey I took get here and the desire to use that same drive and passion to achieve success wherever I work.
+    My journey is ongoing. But, I hope to find a position to utilize my talent and continue my professional growth. What sets me apart is the journey I took to get here and the desire to use that same drive and passion to achieve success wherever I work.
  </h5>
 </div>
   <div class="buttonPDF">
