--- a/AboutMe.html
+++ b/AboutMe.html
@@ -52,7 +52,7 @@
  </h5>
 </div>
   <div class="buttonPDF">
-    <a href="Kevin_Heaghney.pdf" class="resume" download>Resume</a>
+    <a href="Kevin.Heaghney.pdf" class="resume" download>Resume</a>
   </div>
   <footer>
       <div class="footer">
